RESOLVED FIXED145977
[WK2] BrowsingContextController.loadData API is leaking Navigation objects
https://bugs.webkit.org/show_bug.cgi?id=145977
Summary [WK2] BrowsingContextController.loadData API is leaking Navigation objects
Chris Dumez
Reported 2015-06-15 09:53:19 PDT
BrowsingContextController.loadData API is leaking Navigation objects. The issue seems to be that WebPageProxy::loadData() creates a Navigation object but does not pass the navigationID to the WebProcess when sending the essages::WebPage::LoadData IPC. As a result, the WebProcess is using 0 as navigationID and we end up creating a new Navigation object later on for the same navigation. Radar: <rdar://problem/21305706>
Attachments
Patch (5.91 KB, patch)
2015-06-15 11:25 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-06-15 11:25:17 PDT
WebKit Commit Bot
Comment 2 2015-06-15 12:29:45 PDT
Comment on attachment 254885 [details] Patch Clearing flags on attachment: 254885 Committed r185563: <http://trac.webkit.org/changeset/185563>
WebKit Commit Bot
Comment 3 2015-06-15 12:29:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.